chaves criadas para todos os campos necessários e para o botão; Layout concluido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DadosPessoais</string>
+    <string name="edit_name">Nome</string>
+    <string name="edit_number">Telefone</string>
+    <string name="edit_email">Email</string>
+    <string name="edit_Age">Idade</string>
+    <string name="edit_Weight">Peso</string>
+    <string name="edit_height">Altura</string>
+    <string name="botão_enviar">Enviar</string>
 </resources>
